--- a/variant-config.json
+++ b/variant-config.json
@@ -1,24 +1,49 @@
-{
-  "baseline": {
-    "clients": 1,
-    "duration": 60,
-    "width": 1920,
-    "height": 1080,
-    "frameRate": 30,
-    "audio": true,
-    "hardware": true,
-    "game": "default_game"
+[
+  {
+    "baseline": {
+      "clients": 1,
+      "duration": 60,
+      "width": 1920,
+      "height": 1080,
+      "frameRate": 30,
+      "audio": true,
+      "hardware": true,
+      "game": "game2"
+    },
+    "variants": {
+      "clients": [0, 2, 3],
+      "resolutions": [
+        { "width": 1280, "height": 720 },
+        { "width": 2560, "height": 1440 }
+      ],
+      "frameRate": [60],
+      "audio": [false],
+      "hardware": [false]
+    },
+    "runsPerConfig": 30
   },
-  "variants": {
-    "clients": [0, 2, 3],
-    "resolutions": [
-      { "width": 1280, "height": 720 },
-      { "width": 2560, "height": 1440 }
-    ],
-    "frameRate": [60],
-    "audio": [false],
-    "hardware": [false],
-    "game": ["game1", "game2", "game3"]
-  },
-  "runsPerConfig": 30
-}
+  {
+    "baseline": {
+      "clients": 1,
+      "duration": 60,
+      "width": 1920,
+      "height": 1080,
+      "frameRate": 30,
+      "audio": true,
+      "hardware": true,
+      "game": "game1"
+    },
+    "variants": {
+      "clients": [0, 2, 3],
+      "resolutions": [
+        { "width": 1280, "height": 720 },
+        { "width": 2560, "height": 1440 }
+      ],
+      "frameRate": [60],
+      "audio": [false],
+      "hardware": [false]
+    },
+    "runsPerConfig": 30
+  }
+  
+]
